--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/cache": "^11.9.3",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@mui/base": "^5.0.0-beta.32",
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.88",
     "@mui/material": "^5.8.6",
@@ -30,6 +31,8 @@
     "react-scripts": "^5.0.1",
     "react-stomp": "^5.1.0",
     "redux": "^4.2.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "yup": "^0.32.11"
   },
   "scripts": {
@@ -61,7 +64,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
-    "@babel/eslint-parser": "^7.21.3",
+    "@babel/eslint-parser": "^7.23.3",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-react-app": "^7.0.1",
