--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 REACT_APP_BASENAME=/
 REACT_APP_DEFAULT_PATH=/dashboard/default
 REACT_APP_FONT_FAMILY='Roboto', sans-serif
-REACT_APP_API_HOST=localhost:8080
+REACT_APP_API_HOST=s5backendcloudventevoiture-production.up.railway.app
 REACT_APP_API_PORT=8080
-REACT_APP_HTTP=http
+REACT_APP_HTTP=https
 REACT_APP_BORDER_RADIUS=12
